# niceware

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs  words.rs
