[package]
name = "niceware"
description = "Generate or convert random bytes into passphrases. A Rust port of niceware."
homepage = "https://github.com/healeycodes/niceware"
repository = "https://github.com/healeycodes/niceware"
version = "1.0.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
